lib/source/efficiency_curve.h

void read_efficiency(char* path);
double efficiency ( double E_r);
void write_efficiency ( char* path, char* eff_path);